--- a/src/style.css
+++ b/src/style.css
@@ -23,14 +23,16 @@
   --color: #fff;
 }
 
-a {}
-a:hover {}
-
 body {
   margin: 0;
+  padding: 0;
+}
+
+#app {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
