--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,20 @@
+[data-theme="light"] {
+  --background: #fff;
+  --color: #000;
+
+  --logo: url('logo_light.png');
+}
+
+[data-theme="dark"] {
+  --background: #000;
+  --color: #fff;
+
+  --logo: url('logo_dark.png');
+}
+
 :root {
+  --grey: #8884;
+
   font-family: 'Victor Mono', system-ui, sans-serif;
   font-size: 3vmin;
 
@@ -10,17 +26,8 @@
   -ms-transition: color 1s, background 1s, backgroundColor 1s, boxShadow 1s;
   -o-transition: color 1s, background 1s, backgroundColor 1s, boxShadow 1s;
 
-  --grey: #8884;
-}
-
-[data-theme="light"] {
-  --background: #fff;
-  --color: #000;
-}
-
-[data-theme="dark"] {
-  --background: #000;
-  --color: #fff;
+  background: var(--background);
+  color: var(--color);
 }
 
 body {
@@ -35,4 +42,11 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
 }
