--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 [data-theme="light"] {
   --background: #fff;
   --color: #000;
+  --shadow: #0004;
 
   --logo: url('logo_light.png');
 }
@@ -8,6 +9,7 @@
 [data-theme="dark"] {
   --background: #000;
   --color: #fff;
+  --shadow: #fff4;
 
   --logo: url('logo_dark.png');
 }
@@ -28,6 +30,10 @@
 
   background: var(--background);
   color: var(--color);
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
