--- a/src/style.css
+++ b/src/style.css
@@ -2,23 +2,18 @@
   --background: #fff;
   --color: #000;
   --shadow: #0004;
-
-  --logo: url('logo_light.png');
 }
 
 [data-theme="dark"] {
   --background: #000;
   --color: #fff;
   --shadow: #fff4;
-
-  --logo: url('logo_dark.png');
 }
 
 :root {
   --grey: #8884;
 
   font-family: 'Victor Mono', system-ui, sans-serif;
-  font-size: 3vmin;
 
   scroll-behavior: smooth;
 
@@ -30,6 +25,17 @@
 
   background: var(--background);
   color: var(--color);
+}
+
+@media (orientation: portrait) {
+  :root {
+    font-size: 3vmin;
+  }
+}
+@media (orientation: landscape) {
+  :root {
+    font-size: 2vmin;
+  }
 }
 
 * {
@@ -44,7 +50,7 @@ body {
 #app {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -55,4 +61,9 @@ a:visited,
 a:hover,
 a:active {
   color: inherit;
+}
+
+header,
+footer {
+  padding: 0.25rem 0.5rem;
 }
