--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,21 @@
 [data-theme="light"] {
   --background: #fff;
   --color: #000;
+  --theme-color: #000;
   --shadow: #8888;
 }
 
 [data-theme="dark"] {
   --background: #000;
   --color: #fff;
+  --theme-color: #fff;
   --shadow: #8888;
 }
 
 :root {
   --grey: #888;
-
-  font-family: 'Victor Mono', system-ui, sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
 
   scroll-behavior: smooth;
 
@@ -25,6 +27,10 @@
 
   background: var(--background);
   color: var(--color);
+
+  --safe-top: env(safe-area-inset-top);
+  --safe-bottom: env(safe-area-inset-bottom);
+  --usable-vh: calc((100vh - var(--safe-top) - var(--safe-bottom)) / 100);
 }
 
 @media (orientation: portrait) {
@@ -34,7 +40,7 @@
 }
 @media (orientation: landscape) {
   :root {
-    font-size: 2vmin;
+    font-size: 1.5vmin;
   }
 }
 
@@ -54,7 +60,9 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
+  text-align: center;
 }
+
 
 a:link,
 a:visited,
@@ -71,9 +79,45 @@ a:not(#logo_link):hover {
   box-shadow: 0 0 1.5rem 1rem var(--shadow);
 }
 
+header a,
+footer a {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+header a:not(#logo_link):hover svg,
+footer a:hover svg {
+  stroke: var(--background);
+}
+
+header nav li a svg,
+footer svg {
+  width: 1.5rem !important;
+  height: 1.5rem !important;
+}
+
 header,
 footer {
   z-index: 1;
   padding: 0.25rem 1rem;
-  box-shadow: 0 0 0.5rem 0.25rem var(--shadow);
+}
+
+header {
+  height: calc((10 * var(--usable-vh)) + 0.5rem);
+}
+
+main {
+  position: fixed;
+  width: 100%;
+  height: calc(85 * var(--usable-vh));
+  top: calc(10 * var(--usable-vh) + 0.5rem);
+
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+footer {
+  height: calc((5 * var(--usable-vh)) - 0.5rem);
 }
