--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,21 @@
   color: var(--background);
 }
 
+*::selection {
+  background: var(--color);
+  color: var(--background);
+}
+
+*::-moz-selection {
+  background: var(--color);
+  color: var(--background);
+}
+
+*::-webkit-selection {
+  background: var(--color);
+  color: var(--background);
+}
+
 :root {
   --grey: #888;
   font-family: "Noto Sans", sans-serif;
@@ -73,6 +88,10 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
+  background: var(--background);
+  color: var(--color);
 }
 
 #app {
@@ -165,27 +184,32 @@ footer {
   overflow: hidden;
 }
 
-/* Scrollbar Styling for WebKit Browsers */
-main::-webkit-scrollbar {
-  width: 8px; /* Width of the scrollbar */
-}
+/* main {
+  scrollbar-width: thin;
+  scrollbar-color: var(--grey) var(--background);
+}  */
 
-main::-webkit-scrollbar-track {
-  background: var(--background);
+main::-webkit-scrollbar {
+  width: 0.5rem;
 }
 
 main::-webkit-scrollbar-thumb {
-  background-color: var(--grey); /* Scrollbar color */
-  border-radius: 10px;
-  border: 2px solid var(--background); /* Adds space around the thumb */
+  background-color: var(--grey);
+  border-radius: 0.25rem;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+  -ms-border-radius: 0.25rem;
+  -o-border-radius: 0.25rem;
+}
+
+main::-webkit-scrollbar-track {
+  background-color: var(--background);
 }
 
 main::-webkit-scrollbar-thumb:hover {
-  background-color: var(--theme-color);
+  background-color: var(--color);
 }
 
-/* Scrollbar Styling for Firefox */
-main {
-  scrollbar-width: thin;
-  scrollbar-color: var(--grey) var(--background);
+main::-webkit-scrollbar-track:hover {
+  background-color: var(--shadow);
 }
