basic contact form layout and logic

--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,10 @@
   --transition-duration: 666ms; /* Initialize variable for transition duration */
 }
 
+* * {
+  box-sizing: border-box;
+}
+
 * {
   font-family: "Noto Sans", sans-serif;
   font-optical-sizing: auto;
