--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,7 @@
 
 @media (orientation: portrait) {
   :root {
-    font-size: 1.5vmax;
+    font-size: 1.4vmax;
   }
 }
 @media (orientation: landscape) {
@@ -106,9 +106,15 @@
   }
 }
 
+@media (max-width: 480px) {
+  :root {
+    font-size: 1.35vmax;
+  }
+}
+
 @media (max-width: 400px) {
   :root {
-    font-size: 1.25vmax;
+    font-size: 1.3vmax;
   }
 }
 
@@ -188,6 +194,7 @@ footer svg {
 header,
 footer {
   z-index: 1;
+  box-shadow: 0 0 1rem 0.5rem var(--shadow);
 
 }
 
