--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,19 @@
   --shadow: #8888;
 }
 
+:root {
+  --grey: #888;
+  background: var(--background);
+  color: var(--color);
+  --safe-top: env(safe-area-inset-top);
+  --safe-bottom: env(safe-area-inset-bottom);
+  --usable-vh: calc((100vh - var(--safe-top) - var(--safe-bottom)) / 100);
+  --transition-duration: 666ms; /* Initialize variable for transition duration */
+}
+
 /* Text Selection Styling */
 ::selection {
-  background-color: var(--theme-color);
+  background-color: var(--color);
   color: var(--background);
 }
 
@@ -41,16 +51,6 @@
 *::-webkit-selection {
   background: var(--color);
   color: var(--background);
-}
-
-:root {
-  --grey: #888;
-  background: var(--background);
-  color: var(--color);
-  --safe-top: env(safe-area-inset-top);
-  --safe-bottom: env(safe-area-inset-bottom);
-  --usable-vh: calc((100vh - var(--safe-top) - var(--safe-bottom)) / 100);
-  --transition-duration: 666ms; /* Initialize variable for transition duration */
 }
 
 * * {
