--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
   --color: #000;
   --theme-color: #000;
   --shadow: #8888;
+  --invert: 0;
 }
 
 [data-theme='dark'] {
@@ -10,6 +11,7 @@
   --color: #fff;
   --theme-color: #fff;
   --shadow: #8888;
+  --invert: 1;
 }
 
 :root {
@@ -23,11 +25,19 @@
   font-size: calc(2 * var(--usable-vh));
 }
 
-*::selection,
-*::-moz-selection,
-*::-webkit-selection {
-  background: var(--color);
-  color: var(--background);
+* ::selection {
+  background-color: var(--color) !important;
+  color: var(--background) !important;
+}
+
+* ::-moz-selection {
+  background-color: var(--color) !important;
+  color: var(--background) !important;
+}
+
+* ::-webkit-selection {
+  background-color: var(--color) !important;
+  color: var(--background) !important;
 }
 
 * {
@@ -239,4 +249,35 @@ textarea::-webkit-scrollbar-thumb:hover {
 main::-webkit-scrollbar-track:hover,
 textarea::-webkit-scrollbar-track:hover {
   background-color: var(--shadow);
+}
+
+.pac-container * {
+  background-color: var(--background);
+  color: var(--color);
+  border-color: var(--background);
+  border: none;
+}
+
+.pac-container {
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border: none;
+  transform: translateX(0.125rem);
+  -webkit-transform: translateX(0.125rem);
+  -moz-transform: translateX(0.125rem);
+  -ms-transform: translateX(0.125rem);
+  -o-transform: translateX(0.125rem);
+}
+
+.pac-item:hover,
+.pac-item:hover * {
+  background-color: var(--color) !important;
+  color: var(--background) !important;
+}
+
+.hdpi.pac-logo:after {
+  display: none !important;
 }
