--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,19 @@
   --background: #fff;
   --color: #000;
   --shadow: #8888;
+  --half-shadow: #8882;
 }
 
 [data-theme='dark'] {
   --background: #000;
   --color: #fff;
   --shadow: #8888;
+  --half-shadow: #8882;
 }
 
 :root {
   --grey: #888;
+  --blur: 0.5px;
   background: var(--background);
   color: var(--color);
   --safe-top: env(safe-area-inset-top);
@@ -117,19 +120,21 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100vh;
   background: var(--background);
   color: var(--color);
 }
 
 #app {
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
   text-align: center;
+  overflow: hidden;
+}
+
+html,
+body,
+#app {
+  width: 100%;
+  height: 50rem;
   overflow: hidden;
 }
 
@@ -138,33 +143,42 @@ a:visited,
 a:hover,
 a:active {
   color: inherit;
+  position: relative;
 }
 
-a.router-link-active {
-  background: var(--color);
+a.router-link-active,
+a:hover {
   color: var(--background);
+  box-shadow: inset 0 0 0.75rem 0.375rem var(--shadow);
+  background: linear-gradient(45deg,    var(--background) 0%,    var(--shadow) 12.5%,    var(--color) 75%,    var(--color) 100% );
+  text-shadow: 0 0 0.25rem var(--color);
+}
+
+a.router-link-active::after,
+a:hover::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  min-width: fit-content;
+  height: 100%;
+  box-shadow: 0 0 0.75rem 0.375rem var(--shadow);
+  border-radius: inherit;
+  -webkit-border-radius: inherit;
+  -moz-border-radius: inherit;
+  -ms-border-radius: inherit;
+  -o-border-radius: inherit;
+  z-index: -1;
 }
 
 a.router-link-active svg {
   stroke: var(--background);
 }
 
-header a,
-footer a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 header a {
   flex-direction: column;
   padding: 0.5rem;
-}
-
-header a:hover,
-footer a:hover {
-  background: var(--color);
-  color: var(--background);
 }
 
 header a:hover svg,
@@ -175,14 +189,15 @@ footer a:hover svg {
 .icon {
   width: 2.5rem;
   height: 2.5rem;
-  stroke: var(--color); /* Use CSS variable for stroke color */
+  stroke: var(--color);
+  /*UseCSSvariableforstrokecolor*/filter: blur(0.px);
+  -webkit-filter: blur(var(--blur));
 }
 
 header,
 footer {
   width: 100%;
   z-index: 1;
-  box-shadow: 0 0 1rem 0.5rem var(--shadow);
   background: var(--background);
 }
 
@@ -210,12 +225,6 @@ main {
 
 footer {
   height: 2.75rem;
-}
-
-/* Клас для примусового оновлення стилів */
-.force-redraw {
-  transform: scale(1); /* Будь-яка зміна для примусового рендерінгу */
-  overflow: hidden;
 }
 
 main::-webkit-scrollbar,
@@ -248,6 +257,10 @@ textarea::-webkit-scrollbar-track:hover {
   background-color: var(--shadow);
 }
 
+.box-shadow-1-05 {
+  box-shadow: 0 0 1rem 0.5rem var(--shadow);
+}
+
 .flex-align {
   display: flex;
   align-items: center;
@@ -257,6 +270,13 @@ textarea::-webkit-scrollbar-track:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.grid-10 {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  justify-items: center;
+  align-content: center;
 }
 
 .pac-container * {
@@ -288,4 +308,10 @@ textarea::-webkit-scrollbar-track:hover {
 
 .hdpi.pac-logo:after {
   display: none !important;
+}
+
+/* Клас для примусового оновлення стилів */
+.force-redraw {
+  transform: scale(1); /* Будь-яка зміна для примусового рендерінгу */
+  overflow: hidden;
 }
