--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@
 
 :root {
   --grey: #888;
-  --blur: 0.25px;
+  --blur: 0.5px;
   background: var(--background);
   color: var(--color);
   --safe-top: env(safe-area-inset-top);
@@ -147,29 +147,9 @@ a:active {
 }
 
 a.router-link-active,
-a:hover {
+a:not(:has(.moto)):hover {
   color: var(--background);
-  box-shadow: inset 0 0 0.75rem 0.375rem var(--shadow);
-  background: linear-gradient(45deg,    var(--background) 0%,    var(--shadow) 12.5%,    var(--color) 75%,    var(--color) 100% );
-  text-shadow: 0 0 0.25rem var(--color);
-}
-
-a.router-link-active::after,
-a:hover::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  min-width: fit-content;
-  height: 100%;
-  box-shadow: 0 0 0.75rem 0.375rem var(--shadow);
-  border-radius: inherit;
-  -webkit-border-radius: inherit;
-  -moz-border-radius: inherit;
-  -ms-border-radius: inherit;
-  -o-border-radius: inherit;
-  z-index: -1;
+  background: var(--color);
 }
 
 a.router-link-active svg {
@@ -190,7 +170,7 @@ footer a:hover svg {
   width: 2.5rem;
   height: 2.5rem;
   stroke: var(--color);
-  /*UseCSSvariableforstrokecolor*/filter: blur(0.px);
+  filter: blur(var(--blur));
   -webkit-filter: blur(var(--blur));
 }
 
